--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Figma Variable Importer/Exporter",
+    "name": "Figma Variables Import/Export",
     "id": "1353012706408481916",
     "api": "1.0.0",
     "main": "dist/code.js",
